--- a/gitapp/templates/gitapp/rutinas.html
+++ b/gitapp/templates/gitapp/rutinas.html
@@ -19,12 +19,12 @@
         <li><a href="{% url 'index' %}">Inicio</a></li>
         <li><a href="{% url 'ejercicios' %}">Ejercicios</a></li>
         <li><a href="{% url 'usuarios' %}">Usuarios</a></li>
+        <li><a href="{% url 'agregar_rutina' %}">Agregar Rutina</a></li>
     </ul>
 </nav>
 
 <main>
     <h2>Lista de Rutinas</h2>
-
     <ul>
         {% for rutina in rutinas %}
             <li>
@@ -41,22 +41,6 @@
             </li>
         {% endfor %}
     </ul>
-
-    <h3>Agregar Rutina</h3>
-    <form action="{% url 'agregar_rutina' %}" method="POST">
-        {% csrf_token %}
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required><br>
-        <label for="duracion">Duración (minutos):</label>
-        <input type="number" id="duracion" name="duracion" required><br>
-        <label for="ejercicios">Ejercicios:</label>
-        <select id="ejercicios" name="ejercicios" multiple>
-            {% for ejercicio in ejercicios %}
-                <option value="{{ ejercicio.id }}">{{ ejercicio.nombre }}</option>
-            {% endfor %}
-        </select><br>
-        <button type="submit">Agregar Rutina</button>
-    </form>
 </main>
 
 </body>
